--- a/hw/misc/meson.build
+++ b/hw/misc/meson.build
@@ -156,3 +156,6 @@ system_ss.add(when: 'CONFIG_SBSA_REF', if_true: files('sbsa_ec.c'))
 
 # HPPA devices
 system_ss.add(when: 'CONFIG_LASI', if_true: files('lasi.c'))
+
+# My devices
+system_ss.add(when: 'CONFIG_XOR_TEST', if_true: files('xor-test.c'))
